<resources>
    <string name="from">Iš</string>
    <string name="to">Į</string>
    <string name="go_back">Grįžti</string>
    <string name="refresh">Atnaujinti</string>
    <string name="next">Toliau</string>
    <string name="main_menu">Pagrindinis meniu</string>
    <string name="title">Pavežikas</string>
    <string name="hint_number_picker">1</string>
    <string name="hint_date_picker">Data: Pasirinkite datą</string>
    <string name="hint_time_picker">Laikas: Pasirinkite laiką</string>
    <string name="hint_city_address">Adresas, Miestas</string>
    <string name="seat_picker">Laisvų vietų</string>
    <string name="price_picker">Kaina, €</string>
    <string name="driver">Vežėjas</string>
    <string name="passenger">Keleivis</string>
    <string name="add_post_step_2_information_selection">Informacijos pildymas</string>
    <string name="comment">Komentaras</string>
    <string name="add_post_step_3_route_selection">Maršruto pildymas</string>
    <string name="post_windows_msg4">Išvykstama iš:</string>
    <string name="post_windows_msg5">Atvykstama į:</string>
    <string name="post_windows_msg6">Pasirinktos Facebook grupės</string>
    <string name="date">Data</string>
    <string name="edit">Keisti</string>
    <string name="address">Adresas</string>
    <string name="details">Detaliau</string>
    <string name="unnamed">-</string>
    <string name="flexible">"Derinamas: "</string>
    <string name="phone_first_digits">+370</string>
    <string name="add_more">Pridėti daugiau taškų</string>
    <string name="check_fb_groups">Parinkti grupes</string>
    <string name="default_name">Vardas Pavardė</string>
    <string name="menu_item_1">Skelbimai</string>
    <string name="menu_item_2">Sekami maršrutai</string>
    <string name="menu_item_3">Mano skelbimai</string>
    <string name="menu_item_4">Istorija</string>
    <string name="menu_item_5">Nustatymai</string>
    <string name="menu_item_6">Info</string>
    <string name="arrow">&#62;</string>
    <string name="post_list_route">Miestas -> Miestas</string>
    <string name="post_list_date">Menesis 00d</string>
    <string name="post_list_time">00:00-00:00</string>
    <string name="post_list_user">Name Surname</string>
    <string name="post_list_capacity">0</string>
    <string name="post_details_route">City 1 - City 2</string>
    <string name="post_details_type">Tipas</string>
    <string name="post_details_profile">Profilis</string>
    <string name="post_details_date">Menesis 0d.</string>
    <string name="post_details_time">00:00-00:00</string>
    <string name="post_details_seats">Vietos 0/0</string>
    <string name="post_details_price">Kaina: 0 lt</string>
    <string name="post_details_comment">Komentaras komentaras komentaras komentaras komentaras</string>
    <string name="post_details_destination">Atvyksime į</string>
    <string name="post_details_destination_adress">Miestas, gatve</string>
    <string name="post_details_start">Išvyksime iš</string>
    <string name="post_details_start_adress">Miestas, gatve</string>
    <string name="approve">Patvirtinti</string>
    <string name="deny">Atmesti</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="hours"> val. </string>
    <string name="minutes"> min. </string>
    <string name="app_name">Pavežikas</string>
    <string name="action_settings">Nustatymai</string>
    <string name="add_post">Skelbti</string>
    <string name="all">Visi</string>
    <string name="app_id">356729764461219</string>
    <string name="check">Tikrinti</string>
    <string name="choose_city">Pasrinkite miestą</string>
    <string name="drivers">Vežėjai</string>
    <string name="error_inserting_driver_post_date_time"> Nustatykite teisingą išvykimo datą ir laiką (turi būti ne praeityje). </string>
    <string name="error_inserting_driver_post_price"> Nurodykite teisingą pavežimo kainą (iki 300). </string>
    <string name="error_inserting_driver_post_route">Maršrutui parinkite bent 2 miestus. </string>
    <string name="error_inserting_driver_post_seats_number"> Nurodykite teisingą laisvų vietų skaičių (iki 9). </string>
    <string name="facebook_permissions_not_granted">Negalima atlikti šio veiksmo, nes neturite reikiamų Facebook leidimų.</string>
    <string name="filter_type">Filtras: %s</string>
    <string name="change">Keisti</string>
    <string name="home">Grįžti</string>
    <string name="login">Prisijungti</string>
    <string name="facebook_failed_to_authenticate">Nepavyko prisijungti!</string>
    <string name="logout">Atsijungti</string>
    <string name="main_activity">Pagrindinis langas</string>
    <string name="month_1_ltu">Sausio</string>
    <string name="month_2_ltu">Vasario</string>
    <string name="month_3_ltu">Kovo</string>
    <string name="month_4_ltu">Balandžio</string>
    <string name="month_5_ltu">Gegužės</string>
    <string name="month_6_ltu">Birželio</string>
    <string name="month_7_ltu">Liepos</string>
    <string name="month_8_ltu">Rugpjūčio</string>
    <string name="month_9_ltu">Rugsėjo</string>
    <string name="month_10_ltu">Spalio</string>
    <string name="month_11_ltu">Lapkričio</string>
    <string name="month_12_ltu">Gruodžio</string>
    <string name="no_internet_connection">Patikrinkite interneto ryšį!</string>
    <string name="ok">Gerai</string>
    <string name="passengers">Keleiviai</string>
    <string name="press_twice_to_exit_app">Norėdami išeiti paspauskite ATGAL dar kartą</string>
    <string name="cancel">Atšaukti</string>
    <string name="search">Ieškoti</string>
    <string name="set_dropping_address">Įrašyti paleidimo adresą</string>
    <string name="set_leaving_address">Įrašyti išvykimo adresą</string>
    <string name="set_price">Nustatyti kainą litais</string>
    <string name="set_seats_number">Nustatyti vietų skaičių</string>
    <string name="successful_post_insert">Skelbimas sėkmingai įterptas!</string>
    <string name="time_flexible_value"> +- 1 val. 0 min.</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_facbook_login">FacbookLoginActivity</string>
    <string name="unsuccessful_post_insert">Skelbimo nepavyko įterpti! Bandykite dar kartą.</string>
    <string name="url_select_posts">http://vezikas.bugs3.com/json_db_access/selectPosts.php</string>
    <string name="url_get_facebook_information">http://vezikas.bugs3.com/json_db_access/getFacebookInformation.php</string>
    <string name="url_insert_to_post">http://vezikas.bugs3.com/json_db_access/insertToPost.php</string>
    <string name="url_select_from_user_groups">http://vezikas.bugs3.com/json_db_access/selectFromUserGroups.php</string>
    <string name="url_select_from_address">http://vezikas.bugs3.com/json_db_access/selectFromAddress.php</string>
    <string name="url_select_from_phone">http://vezikas.bugs3.com/json_db_access/selectFromPhone.php</string>
    <string name="url_select_from_route">http://vezikas.bugs3.com/json_db_access/selectFromRoute.php</string>
    <string name="url_select_my_posts">http://vezikas.bugs3.com/json_db_access/selectMyPosts.php</string>
    <string name="url_select_post_details">http://vezikas.bugs3.com/json_db_access/selectPostDetails.php</string>
    <string name="url_select_user_rating">http://vezikas.bugs3.com/json_db_access/selectUserRating.php</string>
    <string name="url_update_user">http://vezikas.bugs3.com/json_db_access/updateUser.php</string>
    <string name="url_update_user_groups">http://vezikas.bugs3.com/json_db_access/updateUserGroups.php</string>
    <string name="url_update_user_route_paired_groups">http://vezikas.bugs3.com/json_db_access/updateUserRoutePairedGroups.php</string>
    <string name="url_select_user_route_paired_groups">http://vezikas.bugs3.com/json_db_access/selectUserRoutePairedGroups.php</string>
    <string name="url_select_from_message">http://vezikas.bugs3.com/json_db_access/selectFromMessage.php</string>
    <string-array name="cities_list">
        <item>Vilnius</item>
        <item>Kaunas</item>
        <item>Klaipėda</item>
        <item>Šiauliai</item>
        <item>Panevėžys</item>
        <item>Alytus</item>
        <item>Akmenė</item>
        <item>Anykščiai</item>
        <item>Ariogala</item>
        <item>Baltoji Vokė</item>
        <item>Birštonas</item>
        <item>Biržai</item>
        <item>Daugai</item>
        <item>Druskininkai</item>
        <item>Dūkštas</item>
        <item>Dusetos</item>
        <item>Eišiškės</item>
        <item>Elektrėnai</item>
        <item>Ežerėlis</item>
        <item>Gargždai</item>
        <item>Garliava</item>
        <item>Gelgaudiškis</item>
        <item>Grigiškės</item>
        <item>Ignalina</item>
        <item>Jieznas</item>
        <item>Jonava</item>
        <item>Joniškėlis</item>
        <item>Joniškis</item>
        <item>Jurbarkas</item>
        <item>Kaišiadorys</item>
        <item>Kalvarija</item>
        <item>Kavarskas</item>
        <item>Kazlų Rūda</item>
        <item>Kėdainiai</item>
        <item>Kelmė</item>
        <item>Kybartai</item>
        <item>Kretinga</item>
        <item>Kudirkos Naumiestis</item>
        <item>Kupiškis</item>
        <item>Kuršėnai</item>
        <item>Lazdijai</item>
        <item>Lentvaris</item>
        <item>Linkuva</item>
        <item>Marijampolė</item>
        <item>Mažeikiai</item>
        <item>Molėtai</item>
        <item>Naujoji Akmenė</item>
        <item>Nemenčinė</item>
        <item>Neringa</item>
        <item>Nida</item>
        <item>Obeliai</item>
        <item>Pabradė</item>
        <item>Pagėgiai</item>
        <item>Pakruojis</item>
        <item>Palanga</item>
        <item>Pandėlys</item>
        <item>Panemunė</item>
        <item>Pasvalys</item>
        <item>Plungė</item>
        <item>Priekulė</item>
        <item>Prienai</item>
        <item>Radviliškis</item>
        <item>Ramygala</item>
        <item>Raseiniai</item>
        <item>Rietavas</item>
        <item>Rokiškis</item>
        <item>Rūdiškės</item>
        <item>Salantai</item>
        <item>Seda</item>
        <item>Simnas</item>
        <item>Skaudvilė</item>
        <item>Skuodas</item>
        <item>Smalininkai</item>
        <item>Subačius</item>
        <item>Šakiai</item>
        <item>Šalčininkai</item>
        <item>Šeduva</item>
        <item>Šilalė</item>
        <item>Šilutė</item>
        <item>Širvintos</item>
        <item>Švenčionėliai</item>
        <item>Švenčionys</item>
        <item>Tauragė</item>
        <item>Telšiai</item>
        <item>Tytuvėnai</item>
        <item>Trakai</item>
        <item>Troškūnai</item>
        <item>Ukmergė</item>
        <item>Utena</item>
        <item>Užventis</item>
        <item>Vabalninkas</item>
        <item>Varėna</item>
        <item>Varniai</item>
        <item>Veisiejai</item>
        <item>Venta</item>
        <item>Viekšniai</item>
        <item>Vievis</item>
        <item>Vilkaviškis</item>
        <item>Vilkija</item>
        <item>Virbalis</item>
        <item>Visaginas</item>
        <item>Zarasai</item>
        <item>Žagarė</item>
        <item>Žiežmariai</item>
    </string-array>
    <string name="title_activity_my">MyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_post_list">Posts</string>
    <string name="title_post_detail">Post Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seats">Vietų: </string>
    <string name="price">Kaina: </string>
    <string name="time">Laikas</string>
    <string name="currency">Lt</string>
    <string name="set_selected_groups">Pasirinkite grupes, kuriose talpinti skelbimą</string>
    <string name="revert">Atstatyti į pradinį</string>
    <string name="message_data_is_being_downloaded">Siunčiami duomenys… Bandykite vėliau!</string>
    <string name="message_wrong_route_id">Nepavyko nustatyti maršruto! Parinkite jį iš naujo!</string>
</resources>