<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:background="@drawable/background_action_bar"
    >

    <ImageButton
        android:id="@+id/action_bar_home"
        android:contentDescription="@string/home"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center_vertical"

        android:src="@drawable/mini_logo"
        android:background="@color/transparent"
        android:onClick="home"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/action_bar_title"

        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"

        android:paddingLeft="5dp"
        android:paddingRight="0dp"
        android:paddingEnd="0dp"

        android:gravity="center_vertical"
        android:text="@string/title"
        android:textColor="@color/action_bar_text_color"
        android:textStyle="bold"
        style="@style/Header.Text.Big"
    />

    <ImageButton
        android:id="@+id/action_bar_refresh"
        android:contentDescription="@string/refresh"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:onClick="refresh"
        android:src="@drawable/icon_refresh"
        android:background="@color/transparent"

        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"/>

    <ImageButton
        android:id="@+id/action_bar_main_menu"
        android:contentDescription="@string/main_menu"

        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"

        android:onClick="main_menu"
        android:src="@drawable/icon_toggle"
        android:background="@color/transparent"
    />

</LinearLayout>