<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout

        android:id="@+id/menu_list_upper_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"

        android:background="@color/menu_list_upper_panel"

    >

        <com.facebook.widget.ProfilePictureView

            android:id="@+id/menu_list_profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:gravity="center_horizontal"


            facebook:preset_size="normal"

            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"

            facebook:login_text="@string/login"
            facebook:logout_text="@string/logout"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/menu_list_name_surname"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"

                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"

                android:text=""
                android:hint="@string/default_name"
                android:textColorHint="@color/hint_text_dark"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <RatingBar
                android:id="@+id/menu_list_rating_bar"
                style="?android:attr/ratingBarStyleSmall"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1"
                />

            <com.facebook.widget.LoginButton
                android:id="@+id/menu_list_button_login"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"

                facebook:confirm_logout="false"
                facebook:fetch_user_info="true"
                android:layout_gravity="center_horizontal"

                facebook:login_text="@string/login"
                facebook:logout_text="@string/logout"
                />


        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"

        android:layout_marginTop="10dp"

        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
    >


        <LinearLayout style="@style/MenuLinearLayout"
            android:id="@+id/menu_list_link_1"
            android:layout_marginBottom="5dp"
        >

            <ImageView style="@style/MenuIcon"
                android:id="@+id/menu_list_icon1"
                android:src="@drawable/icon_menu_pin"
                android:contentDescription="@string/unnamed"
            />
            <TextView style="@style/MenuText"
                android:id="@+id/menu_list_text1"
                android:text="@string/menu_item_1"
            />

        </LinearLayout>


        <LinearLayout style="@style/MenuLinearLayout"
                      android:id="@+id/menu_list_link_2"
                      android:layout_marginBottom="5dp"
        >

            <ImageView style="@style/MenuIcon"
                       android:id="@+id/menu_list_icon2"
                       android:src="@drawable/icon_menu_route"
                       android:contentDescription="@string/unnamed"
                />
            <TextView style="@style/MenuText"
                      android:id="@+id/menu_list_text2"
                      android:text="@string/menu_item_2"
                />

        </LinearLayout>


        <LinearLayout style="@style/MenuLinearLayout"
                      android:id="@+id/menu_list_link_3"
                      android:layout_marginBottom="5dp"
        >

            <ImageView style="@style/MenuIcon"
                       android:id="@+id/menu_list_icon3"
                       android:src="@drawable/icon_menu_pin"
                       android:contentDescription="@string/unnamed"
                />
            <TextView style="@style/MenuText"
                      android:id="@+id/menu_list_text3"
                      android:text="@string/menu_item_3"
                />

        </LinearLayout>


        <LinearLayout style="@style/MenuLinearLayout"
                      android:id="@+id/menu_list_link_4"
                      android:layout_marginBottom="5dp"
        >

            <ImageView style="@style/MenuIcon"
                       android:id="@+id/menu_list_icon4"
                       android:src="@drawable/icon_menu_history"
                       android:contentDescription="@string/unnamed"
                />
            <TextView style="@style/MenuText"
                      android:id="@+id/menu_list_text4"
                      android:text="@string/menu_item_4"
                />

        </LinearLayout>


        <LinearLayout style="@style/MenuLinearLayout"
                      android:id="@+id/menu_list_link_5"
                      android:layout_marginBottom="5dp"
        >

            <ImageView style="@style/MenuIcon"
                       android:id="@+id/menu_list_icon5"
                       android:src="@drawable/icon_menu_settings"
                       android:contentDescription="@string/unnamed"
                />
            <TextView style="@style/MenuText"
                      android:id="@+id/menu_list_text5"
                      android:text="@string/menu_item_5"
                />

        </LinearLayout>


        <LinearLayout style="@style/MenuLinearLayout"
                      android:id="@+id/menu_list_link_6"
                      android:layout_marginBottom="5dp"
        >

            <ImageView style="@style/MenuIcon"
                       android:id="@+id/menu_list_icon6"
                       android:src="@drawable/icon_menu_info"
                       android:contentDescription="@string/unnamed"
                />
            <TextView style="@style/MenuText"
                      android:id="@+id/menu_list_text6"
                      android:text="@string/menu_item_6"
                />

        </LinearLayout>



    </LinearLayout>
    
</LinearLayout>
</ScrollView>